# chess-bert-bot

./: config.yml  pyproject.toml  strategies.py
